--- a/bosangka.html
+++ b/bosangka.html
@@ -6,7 +6,7 @@
     <title itemprop="mainEntityOfPage">bosangka | bos angka | bosangka link alternatif | bosangka login</title>
     <meta name="description" content="Link alternatif bosangka, bos angka, bosangka login, bosangka link alternatif, bosangka slot, link bosangka, bosangka gacor, bosangkalink terbaru 2024">
     <meta name="keywords" content="bosangka, bosangka link alternatif, bosangka login, bosangka slot, link bosangka, bosangka link, bosangka gacor, bos angka">
-    <link rel="canonical" href="https://bosangka.github.io/amp/bosangka.html">
+    <link rel="canonical" href="http://realbosangka.com/">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow" />
     <meta name="Googlebot-Image" content="follow, all" />
