--- a/bosangka.html
+++ b/bosangka.html
@@ -11,6 +11,7 @@
     <meta name="googlebot" content="index,follow" />
     <meta name="Googlebot-Image" content="follow, all" />
     <meta name="Scooter" content="follow, all" />
+    <meta name="google-site-verification" content="5tBJ9zV-EbfQu35D4Dg0qsuG_MHfPgeUPoLwFv47ZWM" />
     <meta name="msnbot" content="follow, all" />
     <meta name="alexabot" content="follow, all" />
     <meta name="Slurp" content="follow, all" />
