--- a/bos.html
+++ b/bos.html
@@ -87,20 +87,8 @@
         </amp-story-page-outlink>
       </amp-story-page>
 
-      <!-- Page 1 (Cat): 1 layer (vertical) 
-      <amp-story-page id="page1">
-        <amp-story-grid-layer template="vertical">
-          <h1>Cats</h1>
-          <amp-img src="assets/cat.jpg"
-              width="720" height="1280"
-              layout="responsive">
-          </amp-img>
-          <q>Dogs come when they're called. Cats take a message and get back to you. --Mary Bly</q>
-        </amp-story-grid-layer>
-      </amp-story-page> -->
-
       <!-- Page 2 (Dog): 2 layers (fill + thirds) -->
-      <amp-story-page id="page2">
+      <amp-story-page id="page1">
         <amp-story-grid-layer template="fill">
           <amp-img src="assets/gacor.jpg" 
               width="720" height="1280"
@@ -120,13 +108,37 @@
       </amp-story-page>
 
       <!-- Page 4 (Rabbit): 3 layers (fill (video) + vertical + vertical) -->
-      <amp-story-page id="page4">
+      <amp-story-page id="page2">
         <amp-story-grid-layer template="fill">
           <amp-video autoplay loop
                 width="720" height="1280"
                 poster="assets/zeus.jpeg"
                 layout="responsive">
               <source src="assets/zeus.mp4" type="video/mp4">
+          </amp-video>
+        </amp-story-grid-layer>
+        <amp-story-grid-layer template="vertical">
+          <h1>PALING GACOR</h1>
+        </amp-story-grid-layer>
+        <amp-story-grid-layer template="vertical" class="bottom">
+          <p></p>
+        </amp-story-grid-layer>
+        <amp-story-page-outlink 
+          layout="nodisplay">
+          <a href="https://ismailaip.com/register">
+            DAFTAR DISINI
+          </a>
+        </amp-story-page-outlink>
+      </amp-story-page>
+
+         <!-- Page 4 (Rabbit): 3 layers (fill (video) + vertical + vertical) -->
+      <amp-story-page id="page3">
+        <amp-story-grid-layer template="fill">
+          <amp-video autoplay loop
+                width="720" height="1280"
+                poster="assets/hot.jpeg"
+                layout="responsive">
+              <source src="assets/hot.mp4" type="video/mp4">
           </amp-video>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical">
