--- a/bos.html
+++ b/bos.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BOSANGKA - Terbaik dan Terpercaya 2024</title>
+    <meta name="description" content="BOSANGKA situs game online terbaik dan terpercaya di Indonesia 2024">
     <link rel="canonical" href="https://bosangka.github.io/amp/bos.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
